@@ -1,0 +1,3 @@
+. ./admin/defs.sh
+
+pushLaunchpad || error
